[tool.poetry]
name = "python-bug-reports"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
wait-for-it = "^2.2.1"
SQLAlchemy = "^1.4.36"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# ---- pytest settings ----
[tool.pytest.ini_options]
addopts = [
    "--asyncio-mode=auto",
]
markers = [
    "asyncio: test asyncio",
]
testpaths = ["./tests"]
