[tool.poetry]
name = "python-bugs"
version = "0.1.0"
description = ""
authors = ["zerlok <denergytro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
celery = { version = "^5.2.7", extras = ["redis"] }
pytest = "^7.2.0"
pytest-celery = "^0.0.0"
pytest-docker-tools = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
